--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,5 @@
-altair==5.5.0
-asgiref==3.8.1
-attrs==25.3.0
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2024.7.4
-charset-normalizer==3.3.2
-click==8.1.8
-colorama==0.4.6
-contourpy==1.3.1
-cycler==0.12.1
-Django==5.1.7
-fonttools==4.56.0
-gitdb==4.0.12
-GitPython==3.1.44
-idna==3.7
-Jinja2==3.1.6
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kiwisolver==1.4.8
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-narwhals==1.30.0
-numpy==2.2.4
-packaging==24.2
-pandas==2.2.3
-pillow==11.1.0
-protobuf==5.29.3
-psycopg2==2.9.10
-pyarrow==19.0.1
-pydeck==0.9.1
-pyparsing==3.2.1
-python-dateutil==2.9.0.post0
-pytz==2025.1
-referencing==0.36.2
-requests==2.32.3
-rpds-py==0.23.1
-six==1.17.0
-smmap==5.0.2
-sqlparse==0.5.3
-streamlit==1.43.2
-tenacity==9.0.0
-toml==0.10.2
-tornado==6.4.2
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.2.2
-watchdog==6.0.0
+Django>=4.0,<5.0
+psycopg2-binary>=2.9
+requests>=2.26.0
+gunicorn>=20.1.0
+whitenoise>=6.2.0
